# claude-reflections

./: .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  install.sh  pyproject.toml  run-mcp.sh  uninstall.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/reflections/: SKILL.md  install.md
hooks/: debug-stop-hook.sh  stop-index.sh
src/claude_reflections/: __init__.py  agent.py  cli.py  config.py  indexer.py  search.py  server.py  state.py
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_e2e.py  test_indexer.py  test_search.py  test_state.py  validate_install.sh
