[project]
name = "claude-reflections"
version = "0.2.0"
description = "Minimal conversation memory with vector search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client~=1.16.0",
    "fastembed>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
claude-reflections = "claude_reflections.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_reflections"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["claude_reflections"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring Qdrant (deselect with '-m \"not integration\"')",
    "e2e: end-to-end tests (deselect with '-m \"not e2e\"')",
]
